Fix interaction status display

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -206,6 +206,12 @@
     "        else:\n",
     "            return mc.DistanceMoved(harmonyObject.oid).terminant\n",
     "\n",
+    "    def objectCanMove(self, harmonyObject: HarmonyObject):\n",
+    "        return harmonyObject.oid in mc.Move.entities()\n",
+    "\n",
+    "    def objectCanAct(self, harmonyObject: HarmonyObject):\n",
+    "        return harmonyObject.oid in mc.Weapons.entities()\n",
+    "        \n",
     "    def objectHasMoved(self, harmonyObject: HarmonyObject):\n",
     "        if self.objectLastDistance(harmonyObject) > 0.3:\n",
     "            return True\n",
@@ -296,8 +302,10 @@
     "        factionColors = {faction: color for faction, color in zip(factions, self.distinct_colors(len(factions)))}\n",
     "        factionColors[\"Unaligned\"] = (255, 0, 0)\n",
     "        return [\n",
-    "            MiniMapObject(mem, factionColors[self.faction(mem.oid)] if mem != self.lastClassification and not self.objectCouldInteract(mem) else (0, 255, 0))\n",
-    "            for mem in self.memory]\n",
+    "            MiniMapObject(\n",
+    "                mem,\n",
+    "                factionColors[self.faction(mem.oid)] if not self.objectCouldInteract(mem) else (0, 255, 0)\n",
+    "            ) for mem in self.memory]\n",
     "\n",
     "    def buildMiniMap(self):\n",
     "        return self.cc.buildMiniMap(objectsAndColors=self.objectsAndColors)\n",
@@ -368,14 +376,14 @@
     "        calc_contrast = lambda r, g, b, bg: abs(r - bg[0]) + abs(g - bg[1]) + abs(b - bg[2])\n",
     "        while len(colors) < n:\n",
     "            color = None\n",
-    "            for i in range(10):\n",
+    "            for i in range(100):\n",
     "                r, g, b = (random.randint(50, 230) for _ in range(3))  # Exclude near black/white\n",
     "                contrasts = [calc_contrast(r, g, b, c) for c in contrast_colors + list(colors)]\n",
     "                if sum([contrast > 200 for contrast in contrasts]) >= len(contrast_colors + list(colors)):  # Ensure high contrast\n",
     "                    color = (r, g, b)\n",
     "                    break\n",
     "            if color is None:\n",
-    "                raise Exception(f\"Failed to generate color within 10 cycles\")\n",
+    "                raise Exception(f\"Failed to generate color within 100 cycles\")\n",
     "            colors.add((r, g, b))\n",
     "        self._colors = list(colors)\n",
     "        return self._colors\n",
@@ -416,11 +424,13 @@
     "    def objectCouldInteract(self, obj: TrackedObject):\n",
     "        match self.GameState.getPhase():\n",
     "            case \"Move\":\n",
-    "                return not self.objectHasMoved(obj)\n",
+    "                canMove = self.objectCanMove(obj) and not self.objectHasMoved(obj)\n",
+    "                print(f\"{obj.oid} can move? {canMove}\")\n",
+    "                return canMove\n",
     "            case \"Declare\":\n",
-    "                return not self.objectHasDeclared(obj)\n",
+    "                return self.objectCanAct(obj) and not self.objectHasDeclared(obj)\n",
     "            case \"Action\":\n",
-    "                return not self.objectHasResolved(obj)"
+    "                return self.objectCanAct(obj) and not self.objectHasResolved(obj)"
    ]
   },
   {
