--- a/harmony/dma/MechaCombat/WeaponsSystem.ipynb
+++ b/harmony/dma/MechaCombat/WeaponsSystem.ipynb
@@ -152,7 +152,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"353.52\" cy=\"-294.12\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"353.52\" cy=\"-294.12\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"353.52\" y=\"-290.42\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
@@ -164,15 +164,15 @@
        "<!-- foo&#45;&gt;1 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M354.23,-312.36C359.62,-342.77 376.43,-403.87 388.8,-439.16\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"385.6,-440.61 392.32,-448.8 392.18,-438.21 385.6,-440.61\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M354.23,-312.36C359.62,-342.77 376.43,-403.87 388.8,-439.16\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"385.6,-440.61 392.32,-448.8 392.18,-438.21 385.6,-440.61\"/>\n",
        "<text text-anchor=\"middle\" x=\"318.51\" y=\"-379.56\" font-family=\"Times,serif\" font-size=\"14.00\">OverheatValue</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;1 -->\n",
        "<g id=\"edge13\" class=\"edge\">\n",
        "<title>foo&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M362.88,-311.33C374.25,-341.03 391.59,-402.13 399.07,-438\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"395.63,-438.68 400.98,-447.83 402.5,-437.34 395.63,-438.68\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M362.88,-311.33C374.25,-341.03 391.59,-402.13 399.07,-438\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"395.63,-438.68 400.98,-447.83 402.5,-437.34 395.63,-438.68\"/>\n",
        "<text text-anchor=\"middle\" x=\"414.97\" y=\"-378.46\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "<!-- 3 -->\n",
@@ -184,14 +184,14 @@
        "<!-- foo&#45;&gt;3 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>foo&#45;&gt;3</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M335.16,-280.81C315.01,-266.21 282.48,-242.63 259.47,-225.96\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"261.32,-222.97 251.17,-219.94 257.21,-228.64 261.32,-222.97\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M335.16,-280.81C315.01,-266.21 282.48,-242.63 259.47,-225.96\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"261.32,-222.97 251.17,-219.94 257.21,-228.64 261.32,-222.97\"/>\n",
        "<text text-anchor=\"middle\" x=\"234.82\" y=\"-242.18\" font-family=\"Times,serif\" font-size=\"14.00\">OverheatDamage</text>\n",
        "</g>\n",
        "<!-- [0, 0] -->\n",
        "<g id=\"node10\" class=\"node\">\n",
        "<title>[0, 0]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"332.22\" cy=\"-133.64\" rx=\"35.19\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"332.22\" cy=\"-133.64\" rx=\"35.19\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"332.22\" y=\"-129.94\" font-family=\"Times,serif\" font-size=\"14.00\">[0, 0]</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;[0, 0] -->\n",
@@ -204,21 +204,21 @@
        "<!-- foo&#45;LongRangeWeapons -->\n",
        "<g id=\"node4\" class=\"node\">\n",
        "<title>foo&#45;LongRangeWeapons</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"479.56\" cy=\"-347.24\" rx=\"121.58\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"green\" cx=\"479.56\" cy=\"-347.24\" rx=\"121.58\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"479.56\" y=\"-343.54\" font-family=\"Times,serif\" font-size=\"14.00\">foo&#45;LongRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;LongRangeWeapons&#45;&gt;foo -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
        "<title>foo&#45;LongRangeWeapons&#45;&gt;foo</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M438.99,-330.14C421.82,-322.9 402.11,-314.59 385.94,-307.78\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"386.96,-304.41 376.38,-303.75 384.24,-310.86 386.96,-304.41\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M438.99,-330.14C421.82,-322.9 402.11,-314.59 385.94,-307.78\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"386.96,-304.41 376.38,-303.75 384.24,-310.86 386.96,-304.41\"/>\n",
        "<text text-anchor=\"middle\" x=\"484.96\" y=\"-307.76\" font-family=\"Times,serif\" font-size=\"14.00\">LongRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;LongRangeWeapons&#45;&gt;1 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;LongRangeWeapons&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M467.73,-365.27C454.5,-385.42 432.99,-418.2 418.13,-440.85\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"415.15,-439.01 412.59,-449.29 421.01,-442.85 415.15,-439.01\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M467.73,-365.27C454.5,-385.42 432.99,-418.2 418.13,-440.85\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"415.15,-439.01 412.59,-449.29 421.01,-442.85 415.15,-439.01\"/>\n",
        "<text text-anchor=\"middle\" x=\"413.43\" y=\"-406.86\" font-family=\"Times,serif\" font-size=\"14.00\">Damage</text>\n",
        "</g>\n",
        "<!-- 5 -->\n",
@@ -230,28 +230,28 @@
        "<!-- foo&#45;LongRangeWeapons&#45;&gt;5 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;LongRangeWeapons&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M503.76,-329.47C527.06,-312.34 562.24,-286.5 586.38,-268.77\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"588.75,-271.37 594.73,-262.63 584.6,-265.73 588.75,-271.37\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M503.76,-329.47C527.06,-312.34 562.24,-286.5 586.38,-268.77\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"588.75,-271.37 594.73,-262.63 584.6,-265.73 588.75,-271.37\"/>\n",
        "<text text-anchor=\"middle\" x=\"514.57\" y=\"-287.92\" font-family=\"Times,serif\" font-size=\"14.00\">Modifier</text>\n",
        "</g>\n",
        "<!-- foo&#45;MidRangeWeapons -->\n",
        "<g id=\"node6\" class=\"node\">\n",
        "<title>foo&#45;MidRangeWeapons</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"178.95\" cy=\"-301.45\" rx=\"116.18\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"178.95\" cy=\"-301.45\" rx=\"116.18\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"178.95\" y=\"-297.75\" font-family=\"Times,serif\" font-size=\"14.00\">foo&#45;MidRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;MidRangeWeapons&#45;&gt;foo -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
        "<title>foo&#45;MidRangeWeapons&#45;&gt;foo</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M291.48,-296.72C300.27,-296.35 308.69,-296 316.33,-295.68\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"316.73,-299.17 326.57,-295.25 316.44,-292.17 316.73,-299.17\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M291.48,-296.72C300.27,-296.35 308.69,-296 316.33,-295.68\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"316.73,-299.17 326.57,-295.25 316.44,-292.17 316.73,-299.17\"/>\n",
        "<text text-anchor=\"middle\" x=\"372.41\" y=\"-285\" font-family=\"Times,serif\" font-size=\"14.00\">MidRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;MidRangeWeapons&#45;&gt;3 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
        "<title>foo&#45;MidRangeWeapons&#45;&gt;3</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M189.3,-283.15C197.45,-268.73 208.91,-248.46 218,-232.39\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"221.16,-233.91 223.04,-223.48 215.07,-230.47 221.16,-233.91\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M189.3,-283.15C197.45,-268.73 208.91,-248.46 218,-232.39\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"221.16,-233.91 223.04,-223.48 215.07,-230.47 221.16,-233.91\"/>\n",
        "<text text-anchor=\"middle\" x=\"174.15\" y=\"-261.57\" font-family=\"Times,serif\" font-size=\"14.00\">Damage</text>\n",
        "</g>\n",
        "<!-- 2 -->\n",
@@ -263,28 +263,28 @@
        "<!-- foo&#45;MidRangeWeapons&#45;&gt;2 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
        "<title>foo&#45;MidRangeWeapons&#45;&gt;2</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M135,-284.61C111.13,-275.46 82.11,-264.33 60.16,-255.92\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"61.2,-252.57 50.61,-252.26 58.7,-259.11 61.2,-252.57\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M135,-284.61C111.13,-275.46 82.11,-264.33 60.16,-255.92\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"61.2,-252.57 50.61,-252.26 58.7,-259.11 61.2,-252.57\"/>\n",
        "<text text-anchor=\"middle\" x=\"112.83\" y=\"-259.06\" font-family=\"Times,serif\" font-size=\"14.00\">Modifier</text>\n",
        "</g>\n",
        "<!-- foo&#45;ShortRangeWeapons -->\n",
        "<g id=\"node8\" class=\"node\">\n",
        "<title>foo&#45;ShortRangeWeapons</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"488.37\" cy=\"-167.23\" rx=\"124.28\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"488.37\" cy=\"-167.23\" rx=\"124.28\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"488.37\" y=\"-163.53\" font-family=\"Times,serif\" font-size=\"14.00\">foo&#45;ShortRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;ShortRangeWeapons&#45;&gt;foo -->\n",
        "<g id=\"edge11\" class=\"edge\">\n",
        "<title>foo&#45;ShortRangeWeapons&#45;&gt;foo</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M469.33,-185.14C445.12,-207.92 403.31,-247.26 377.11,-271.92\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"374.4,-269.67 369.51,-279.07 379.19,-274.77 374.4,-269.67\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M469.33,-185.14C445.12,-207.92 403.31,-247.26 377.11,-271.92\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"374.4,-269.67 369.51,-279.07 379.19,-274.77 374.4,-269.67\"/>\n",
        "<text text-anchor=\"middle\" x=\"497.72\" y=\"-232.33\" font-family=\"Times,serif\" font-size=\"14.00\">ShortRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;ShortRangeWeapons&#45;&gt;5 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
        "<title>foo&#45;ShortRangeWeapons&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M515.45,-184.99C536.15,-198.57 564.58,-217.22 585.44,-230.9\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"583.59,-233.87 593.87,-236.43 587.42,-228.02 583.59,-233.87\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M515.45,-184.99C536.15,-198.57 564.58,-217.22 585.44,-230.9\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"583.59,-233.87 593.87,-236.43 587.42,-228.02 583.59,-233.87\"/>\n",
        "<text text-anchor=\"middle\" x=\"520.94\" y=\"-211.75\" font-family=\"Times,serif\" font-size=\"14.00\">Damage</text>\n",
        "</g>\n",
        "<!-- 0 -->\n",
@@ -296,27 +296,27 @@
        "<!-- foo&#45;ShortRangeWeapons&#45;&gt;0 -->\n",
        "<g id=\"edge10\" class=\"edge\">\n",
        "<title>foo&#45;ShortRangeWeapons&#45;&gt;0</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M496.3,-149.23C507.72,-123.32 528.88,-75.32 542.2,-45.11\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"545.56,-46.16 546.39,-35.6 539.15,-43.34 545.56,-46.16\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M496.3,-149.23C507.72,-123.32 528.88,-75.32 542.2,-45.11\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"545.56,-46.16 546.39,-35.6 539.15,-43.34 545.56,-46.16\"/>\n",
        "<text text-anchor=\"middle\" x=\"488.75\" y=\"-100.97\" font-family=\"Times,serif\" font-size=\"14.00\">Modifier</text>\n",
        "</g>\n",
        "<!-- bar -->\n",
        "<g id=\"node11\" class=\"node\">\n",
        "<title>bar</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"270.84\" cy=\"-576.79\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"270.84\" cy=\"-576.79\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"270.84\" y=\"-573.09\" font-family=\"Times,serif\" font-size=\"14.00\">bar</text>\n",
        "</g>\n",
        "<!-- bar&#45;&gt;1 -->\n",
        "<g id=\"edge15\" class=\"edge\">\n",
        "<title>bar&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M287.68,-562.52C310.34,-543.32 350.84,-509.01 376.95,-486.88\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"379.52,-489.29 384.89,-480.16 375,-483.95 379.52,-489.29\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M287.68,-562.52C310.34,-543.32 350.84,-509.01 376.95,-486.88\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"379.52,-489.29 384.89,-480.16 375,-483.95 379.52,-489.29\"/>\n",
        "<text text-anchor=\"middle\" x=\"298.32\" y=\"-528.5\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "<!-- [50, 50] -->\n",
        "<g id=\"node12\" class=\"node\">\n",
        "<title>[50, 50]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"165.03\" cy=\"-695.28\" rx=\"46.59\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"165.03\" cy=\"-695.28\" rx=\"46.59\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"165.03\" y=\"-691.58\" font-family=\"Times,serif\" font-size=\"14.00\">[50, 50]</text>\n",
        "</g>\n",
        "<!-- bar&#45;&gt;[50, 50] -->\n",
@@ -329,20 +329,20 @@
        "<!-- bar1 -->\n",
        "<g id=\"node13\" class=\"node\">\n",
        "<title>bar1</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"545.99\" cy=\"-549.09\" rx=\"32.49\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"545.99\" cy=\"-549.09\" rx=\"32.49\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"545.99\" y=\"-545.39\" font-family=\"Times,serif\" font-size=\"14.00\">bar1</text>\n",
        "</g>\n",
        "<!-- bar1&#45;&gt;1 -->\n",
        "<g id=\"edge17\" class=\"edge\">\n",
        "<title>bar1&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M523.44,-536.1C498.51,-521.73 458.26,-498.55 430.92,-482.8\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"432.6,-479.73 422.18,-477.77 429.1,-485.8 432.6,-479.73\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M523.44,-536.1C498.51,-521.73 458.26,-498.55 430.92,-482.8\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"432.6,-479.73 422.18,-477.77 429.1,-485.8 432.6,-479.73\"/>\n",
        "<text text-anchor=\"middle\" x=\"443.18\" y=\"-513.25\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "<!-- [150, 150] -->\n",
        "<g id=\"node14\" class=\"node\">\n",
        "<title>[150, 150]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"580.31\" cy=\"-729.39\" rx=\"58.49\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"580.31\" cy=\"-729.39\" rx=\"58.49\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"580.31\" y=\"-725.69\" font-family=\"Times,serif\" font-size=\"14.00\">[150, 150]</text>\n",
        "</g>\n",
        "<!-- bar1&#45;&gt;[150, 150] -->\n",
@@ -361,14 +361,14 @@
        "<!-- bar2&#45;&gt;1 -->\n",
        "<g id=\"edge19\" class=\"edge\">\n",
        "<title>bar2&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M471.45,-584.96C457.64,-561.41 432.78,-519.02 416.76,-491.7\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"419.77,-489.92 411.7,-483.07 413.74,-493.46 419.77,-489.92\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M471.45,-584.96C457.64,-561.41 432.78,-519.02 416.76,-491.7\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"419.77,-489.92 411.7,-483.07 413.74,-493.46 419.77,-489.92\"/>\n",
        "<text text-anchor=\"middle\" x=\"410.11\" y=\"-542.13\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "<!-- [1000, 1000] -->\n",
        "<g id=\"node16\" class=\"node\">\n",
        "<title>[1000, 1000]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"667.48\" cy=\"-645.63\" rx=\"70.39\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"green\" cx=\"667.48\" cy=\"-645.63\" rx=\"70.39\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"667.48\" y=\"-641.93\" font-family=\"Times,serif\" font-size=\"14.00\">[1000, 1000]</text>\n",
        "</g>\n",
        "<!-- bar2&#45;&gt;[1000, 1000] -->\n",
@@ -382,7 +382,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7ffee80dca50>"
+       "<graphviz.graphs.Digraph at 0x7ffeedf6d4d0>"
       ]
      },
      "metadata": {},
@@ -412,6 +412,56 @@
     "    assert Weapons.range(entity=\"foo\", target=\"bar2\") == \"long\"\n",
     "    display(qs.render())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a7839a96-dd0e-4e1c-bbd7-9c4a36b21a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Weapons(entity='foo', Overheat=Overheat(entity='foo', OverheatValue=OverheatValue(entity='foo', terminant=1), OverheatDamage=OverheatDamage(entity='foo', terminant=3)), LongRangeWeapons=LongRangeWeapons(entity='foo', Targeting=Targeting(entity='foo-LongRangeWeapons', Damage=Damage(entity='foo-LongRangeWeapons', terminant=1), Modifier=Modifier(entity='foo-LongRangeWeapons', terminant=5))), MidRangeWeapons=MidRangeWeapons(entity='foo', Targeting=Targeting(entity='foo-MidRangeWeapons', Damage=Damage(entity='foo-MidRangeWeapons', terminant=3), Modifier=Modifier(entity='foo-MidRangeWeapons', terminant=2))), ShortRangeWeapons=ShortRangeWeapons(entity='foo', Targeting=Targeting(entity='foo-ShortRangeWeapons', Damage=Damage(entity='foo-ShortRangeWeapons', terminant=5), Modifier=Modifier(entity='foo-ShortRangeWeapons', terminant=0))))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Weapons(\"foo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5de0c09b-4141-4ffc-a0df-e035b6d6145b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['foo']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Weapons.entities()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c141b62-db22-4500-bd5a-fd8def72e8f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
