--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "from importnb import Notebook\n",
     "with Notebook():\n",
-    "    from Observer import Observer, CaptureConfiguration, CameraChange, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject, Transition"
+    "    from Observer import Observer, CaptureConfiguration, CameraChange, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject, Transition, clipImage"
    ]
   },
   {
@@ -506,28 +506,27 @@
     "        contours, _ = cv2.findContours(contourOverlap, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "        return contours[-1]\n",
     "\n",
+    "    def realSpaceBoundingBox(self):\n",
+    "        if self.realSpaceContours is None:\n",
+    "            self.realSpaceContours = self.rsc.cameraRealSpaceOverlap(self.cameras)\n",
+    "        \n",
+    "        x, y, w, h = 1200, 1200, 1, 1\n",
+    "        for contour in self.realSpaceContours:\n",
+    "            cbX, cbY, cbW, cbH = cv2.boundingRect(contour)\n",
+    "            cb_maxX = cbX + cbW\n",
+    "            cb_maxY = cbY + cbH\n",
+    "            x = min(x, cbX)\n",
+    "            y = min(y, cbY)\n",
+    "            w = max(w, cb_maxX - x)\n",
+    "            h = max(h, cb_maxY - y)\n",
+    "        return x, y, w, h\n",
+    "\n",
     "    def buildMiniMap(self, objectsAndColors: list[MiniMapObject]):\n",
     "        image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
     "        if self.rsc is None:\n",
     "            return image\n",
-    "        try:\n",
-    "            if self.realSpaceContours is None:\n",
-    "                self.realSpaceContours = self.rsc.cameraRealSpaceOverlap(self.cameras)\n",
-    "                x, y, w, h = 1200, 1200, 1, 1\n",
-    "                for contour in self.realSpaceContours:\n",
-    "                    cbX, cbY, cbW, cbH = cv2.boundingRect(contour)\n",
-    "                    cb_maxX = cbX + cbW\n",
-    "                    cb_maxY = cbY + cbH\n",
-    "                    x = min(x, cbX)\n",
-    "                    y = min(y, cbY)\n",
-    "                    w = max(w, cb_maxX - x)\n",
-    "                    h = max(h, cb_maxY - y)\n",
-    "                self.realSpaceBoundingBox = x, y, w, h\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            self.realSpaceContours = None\n",
-    "            return image\n",
-    "        x, y, w, h = self.realSpaceBoundingBox\n",
+    "\n",
+    "        x, y, w, h = self.realSpaceBoundingBox()\n",
     "\n",
     "        print(f\"Minimap has {len(objectsAndColors)} objects\")\n",
     "        if len(objectsAndColors) == 0:\n",
@@ -582,7 +581,40 @@
    "source": [
     "class CalibratedObserver(Observer):\n",
     "    def __init__(self, config: CalibratedCaptureConfiguration):\n",
-    "        super().__init__(config)"
+    "        super().__init__(config)\n",
+    "\n",
+    "    def buildMiniMap(self, objectsAndColors=None):\n",
+    "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or self.objectsAndColors)\n",
+    "\n",
+    "    def object_visual(self, changeSet: ChangeSet, withContours=True, margin=0):\n",
+    "        if changeSet.empty:\n",
+    "            return np.zeros([10, 10], dtype=\"float32\")\n",
+    "\n",
+    "        images = {cam: change.after for cam, change in changeSet.changeSet.items() if change.changeType not in [\"delete\", None]}\n",
+    "        # TODO: Add snippet of object from MiniMap\n",
+    "        # miniMap = self.buildMiniMap()\n",
+    "        # hull = self.cc.objectToHull(changeSet)\n",
+    "        # mmcb_x, mmcb_y, mmcb_w, mmcb_h = cv2.boundingRect([np.array(hull, dtype=\"int32\")])\n",
+    "\n",
+    "        # images['minimap'] = miniMap[mmcb_y: mmcb_y + mmcb_h, mmcb_x: mmcb_x + mmcb_w]\n",
+    "        \n",
+    "        maxHeight =  max([im.shape[0] + margin * 2 for im in images.values()])\n",
+    "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
+    "    \n",
+    "        margins = [-margin, -margin, margin * 2, margin * 2]\n",
+    "\n",
+    "        for camName, change in changeSet.changeSet.items():\n",
+    "            if change.changeType == \"delete\":\n",
+    "                images[camName] = filler\n",
+    "            else:\n",
+    "                if withContours:\n",
+    "                    images[camName] = clipImage(cv2.drawContours(\n",
+    "                        self.cc.cameras[camName].mostRecentFrame.copy(),\n",
+    "                        change.changeContours, -1, (255, 0, 0), -1), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
+    "                else:\n",
+    "                    images[camName] = clipImage(self.cc.cameras[camName].mostRecentFrame.copy(), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
+    "\n",
+    "        return hStackImages(images.values())"
    ]
   },
   {
