--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -284,7 +284,7 @@
     "        diff = cv2.absdiff(cv2.cvtColor(im0, cv2.COLOR_BGR2GRAY),\n",
     "                           cv2.cvtColor(im1, cv2.COLOR_BGR2GRAY))\n",
     "\n",
-    "        thresh = cv2.threshold(cv2.GaussianBlur(diff, (15, 25), 0), 42 ,255,cv2.THRESH_BINARY)[1]\n",
+    "        thresh = cv2.threshold(cv2.GaussianBlur(diff, (15, 25), 0), 15, 255,cv2.THRESH_BINARY)[1]\n",
     "        kernel = np.ones((3, 3), np.uint8) \n",
     "        dilate = cv2.dilate(thresh, kernel, iterations=2)\n",
     "        return cv2.findContours(dilate.copy(), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[0]\n",
@@ -306,7 +306,7 @@
     "            bRect = cv2.boundingRect(contour)\n",
     "            x, y, w, h = bRect\n",
     "            area = w * h\n",
-    "            if area > 1000:\n",
+    "            if 1000 < area < 100000:\n",
     "                filteredContours.append(contour)\n",
     "        if len(filteredContours) > 0:\n",
     "            # Create Before/After clips\n",
@@ -456,29 +456,6 @@
     "            return False\n",
     "        return \\\n",
     "            sum([notNoneChanges[camName] == other.changeSet[camName] for camName in notNoneChanges.keys()]) / len(notNoneChanges) >= 0.3\n",
-    "\n",
-    "    def visual(self, withContours=True, margin=0):\n",
-    "        images = [change.after for change in self.changeSet.values() if change.changeType not in [\"delete\", None]]\n",
-    "        maxHeight =  max([im.shape[0] + margin * 2 for im in images])\n",
-    "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
-    "    \n",
-    "        margins = [-margin, -margin, margin * 2, margin * 2]\n",
-    "    \n",
-    "        if withContours:\n",
-    "            images = [clipImage(cv2.drawContours(cameras[camName].mostRecentFrame.copy(), change.changeContours, -1, (255, 0, 0), -1), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
-    "                      if change.changeType != \"delete\" else filler\n",
-    "                      for camName, change in self.changeSet.items()]\n",
-    "        else:\n",
-    "            images = [clipImage(cameras[camName].mostRecentFrame.copy(), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
-    "                      if change.changeType != \"delete\" else filler\n",
-    "                      for camName, change in self.changeSet.items()]\n",
-    "            \n",
-    "        maxHeight =  max([im.shape[0] for im in images])\n",
-    "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
-    "        if not self.empty:\n",
-    "            return hStackImages(images)\n",
-    "        else:\n",
-    "            return np.zeros([10, 10], dtype=\"float32\")\n",
     "        \n",
     "    def update(self, changeSet, overwrite=True):\n",
     "        print(f\"In update: overwrite - {overwrite}\")\n",
@@ -506,8 +483,8 @@
     "                                if cs is not None and cs.changeType != \"delete\"],\n",
     "                               key=lambda x: x.size if x is not None else 0)[0]\n",
     "        except:\n",
-    "            print(\"Failed to build TrackedObject\")\n",
-    "            raise\n",
+    "            print(\"Failed to build TrackedObject icon\")\n",
+    "            self.icon = np.zeros([100, 100], dtype=\"uint8\")\n",
     "\n",
     "    def __repr__(self):\n",
     "        changeSet = {camName: cS for camName, cS in self.changeSet.items() if cS is not None and cS.changeType not in [None, 'delete']}\n",
@@ -802,12 +779,15 @@
     "\n",
     "        self.lastMemory = {\"deletedObject\": oid}\n",
     "        self.passiveMode()\n",
+    "\n",
+    "    def cycleStatus(self):\n",
+    "        return f\"{self.cycleCounter:5} -- {self}\"\n",
     "    \n",
     "    def cycle(self):\n",
     "        minimumClassificationTime = 2\n",
     "        cycleStart = datetime.utcnow()\n",
     "        try:\n",
-    "            print(f\"Starting Cycle {self.cycleCounter:5} -- {self}\")\n",
+    "            print(f\"Starting Cycle {self.cycleStatus()}\")\n",
     "            nextState = \"idle\"\n",
     "            self.cc.capture()\n",
     "            changes = self.referenceFrameDeltas()\n",
@@ -895,7 +875,30 @@
     "        return images\n",
     "            \n",
     "    def __repr__(self):\n",
-    "        return f\"CapMac -- {self.mode} {str(len(self.calibrationPts)) + ' ' if self.mode == 'calibrate' else ''}{self.state}\""
+    "        return f\"CapMac -- {self.mode} {str(len(self.calibrationPts)) + ' ' if self.mode == 'calibrate' else ''}{self.state}\"\n",
+    "\n",
+    "    def object_visual(self, changeSet: ChangeSet, withContours=True, margin=0):\n",
+    "        images = [change.after for change in changeSet.changeSet.values() if change.changeType not in [\"delete\", None]]\n",
+    "        maxHeight =  max([im.shape[0] + margin * 2 for im in images])\n",
+    "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
+    "    \n",
+    "        margins = [-margin, -margin, margin * 2, margin * 2]\n",
+    "    \n",
+    "        if withContours:\n",
+    "            images = [clipImage(cv2.drawContours(cameras[camName].mostRecentFrame.copy(), change.changeContours, -1, (255, 0, 0), -1), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
+    "                      if change.changeType != \"delete\" else filler\n",
+    "                      for camName, change in changeSet.changeSet.items()]\n",
+    "        else:\n",
+    "            images = [clipImage(cameras[camName].mostRecentFrame.copy(), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
+    "                      if change.changeType != \"delete\" else filler\n",
+    "                      for camName, change in changeSet.changeSet.items()]\n",
+    "            \n",
+    "        maxHeight =  max([im.shape[0] for im in images])\n",
+    "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
+    "        if not changeSet.empty:\n",
+    "            return hStackImages(images)\n",
+    "        else:\n",
+    "            return np.zeros([10, 10], dtype=\"float32\")"
    ]
   },
   {
