--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "from importnb import Notebook\n",
     "with Notebook():\n",
-    "    from quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, FloatSystem, IntegerArraySystem"
+    "    from quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, FloatSystem, FloatArraySystem"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class XYLocation(IntegerArraySystem):\n",
+    "class XYLocation(FloatArraySystem):\n",
     "    \"\"\" Location in XY plane \"\"\"\n",
     "    @classmethod\n",
     "    def validate(cls, terminant):\n",
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MovementSpeed(IntegerSystem):\n",
+    "class MovementSpeed(FloatSystem):\n",
     "    \"\"\" Movement Speed Value \"\"\"\n",
     "\n",
     "    class MovementSpeedViolation(Exception):\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b2d149af-714c-468a-a4ea-df2fcf2935b1",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f670389b-5619-4e03-9832-dfe66a35ed38",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a2e8cca4-59a4-4dbf-9efe-3cb63306a362",
    "metadata": {},
    "outputs": [
@@ -211,21 +211,21 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"184.47\" cy=\"-154.86\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"red\" cx=\"184.47\" cy=\"-154.86\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"184.47\" y=\"-151.16\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
-       "<!-- 8 -->\n",
+       "<!-- 0.31496064 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>8</title>\n",
-       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"288.23\" cy=\"-29.77\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"288.23\" y=\"-26.07\" font-family=\"Times,serif\" font-size=\"14.00\">8</text>\n",
+       "<title>0.31496064</title>\n",
+       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"288.23\" cy=\"-29.77\" rx=\"66.09\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"288.23\" y=\"-26.07\" font-family=\"Times,serif\" font-size=\"14.00\">0.31496064</text>\n",
        "</g>\n",
-       "<!-- foo&#45;&gt;8 -->\n",
+       "<!-- foo&#45;&gt;0.31496064 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>foo&#45;&gt;8</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M197.61,-139.02C215.44,-117.52 247.47,-78.91 268.28,-53.82\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"271.18,-55.81 274.87,-45.88 265.79,-51.34 271.18,-55.81\"/>\n",
-       "<text text-anchor=\"middle\" x=\"172.44\" y=\"-100.22\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
+       "<title>foo&#45;&gt;0.31496064</title>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M197.61,-139.02C215.05,-117.99 246.07,-80.6 266.89,-55.5\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"269.83,-57.43 273.53,-47.5 264.45,-52.96 269.83,-57.43\"/>\n",
+       "<text text-anchor=\"middle\" x=\"171.75\" y=\"-101.06\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
        "</g>\n",
        "<!-- j -->\n",
        "<g id=\"node3\" class=\"node\">\n",
@@ -249,8 +249,8 @@
        "<!-- foo&#45;&gt;0.0 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;&gt;0.0</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M159.29,-161.72C133.13,-168.85 92,-180.06 62.71,-188.04\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"61.61,-184.71 52.88,-190.72 63.45,-191.46 61.61,-184.71\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M159.29,-161.72C133.13,-168.85 92,-180.06 62.71,-188.04\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"61.61,-184.71 52.88,-190.72 63.45,-191.46 61.61,-184.71\"/>\n",
        "<text text-anchor=\"middle\" x=\"55.5\" y=\"-163.68\" font-family=\"Times,serif\" font-size=\"14.00\">DistanceMoved</text>\n",
        "</g>\n",
        "<!-- 0 -->\n",
@@ -262,28 +262,28 @@
        "<!-- foo&#45;&gt;0 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;&gt;0</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M207.81,-163.93C233.28,-173.83 274.26,-189.75 303.01,-200.91\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"302.04,-204.29 312.63,-204.65 304.57,-197.77 302.04,-204.29\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M207.81,-163.93C233.28,-173.83 274.26,-189.75 303.01,-200.91\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"302.04,-204.29 312.63,-204.65 304.57,-197.77 302.04,-204.29\"/>\n",
        "<text text-anchor=\"middle\" x=\"221.41\" y=\"-186.22\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "<!-- [1, 1] -->\n",
        "<g id=\"node6\" class=\"node\">\n",
        "<title>[1, 1]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"176.86\" cy=\"-317.16\" rx=\"35.19\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"red\" cx=\"176.86\" cy=\"-317.16\" rx=\"35.19\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"176.86\" y=\"-313.46\" font-family=\"Times,serif\" font-size=\"14.00\">[1, 1]</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;[1, 1] -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
        "<title>foo&#45;&gt;[1, 1]</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M183.61,-173.17C182.29,-201.29 179.75,-255.37 178.19,-288.66\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"174.69,-288.52 177.72,-298.68 181.69,-288.85 174.69,-288.52\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M183.61,-173.17C182.29,-201.29 179.75,-255.37 178.19,-288.66\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"174.69,-288.52 177.72,-298.68 181.69,-288.85 174.69,-288.52\"/>\n",
        "<text text-anchor=\"middle\" x=\"140.9\" y=\"-234.71\" font-family=\"Times,serif\" font-size=\"14.00\">XYLocation</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fff73fc4a90>"
+       "<graphviz.graphs.Digraph at 0x7fff266ed5d0>"
       ]
      },
      "metadata": {},
@@ -293,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Caught expected Movement Speed Violation: Cannot move unit further (9.0) than its movement speed (8)\n",
+      "Caught expected Movement Speed Violation: Cannot move unit further (0.35433072) than its movement speed (0.31496064)\n",
       "Final State\n"
      ]
     },
@@ -306,87 +306,87 @@
        "<!-- Generated by graphviz version 2.43.0 (0)\n",
        " -->\n",
        "<!-- Title: DMA Pages: 1 -->\n",
-       "<svg width=\"379pt\" height=\"343pt\"\n",
-       " viewBox=\"0.00 0.00 379.10 343.16\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<svg width=\"470pt\" height=\"343pt\"\n",
+       " viewBox=\"0.00 0.00 470.27 343.16\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 339.16)\">\n",
        "<title>DMA</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-339.16 375.1,-339.16 375.1,4 -4,4\"/>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-339.16 466.27,-339.16 466.27,4 -4,4\"/>\n",
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"184.47\" cy=\"-154.86\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"184.47\" y=\"-151.16\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
+       "<ellipse fill=\"none\" stroke=\"red\" cx=\"275.64\" cy=\"-154.86\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"275.64\" y=\"-151.16\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
-       "<!-- 8 -->\n",
+       "<!-- 0.31496064 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>8</title>\n",
-       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"288.23\" cy=\"-29.77\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"288.23\" y=\"-26.07\" font-family=\"Times,serif\" font-size=\"14.00\">8</text>\n",
+       "<title>0.31496064</title>\n",
+       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"379.4\" cy=\"-29.77\" rx=\"66.09\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"379.4\" y=\"-26.07\" font-family=\"Times,serif\" font-size=\"14.00\">0.31496064</text>\n",
        "</g>\n",
-       "<!-- foo&#45;&gt;8 -->\n",
+       "<!-- foo&#45;&gt;0.31496064 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>foo&#45;&gt;8</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M197.61,-139.02C215.44,-117.52 247.47,-78.91 268.28,-53.82\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"271.18,-55.81 274.87,-45.88 265.79,-51.34 271.18,-55.81\"/>\n",
-       "<text text-anchor=\"middle\" x=\"172.44\" y=\"-100.22\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
+       "<title>foo&#45;&gt;0.31496064</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M288.78,-139.02C306.22,-117.99 337.24,-80.6 358.06,-55.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"361,-57.43 364.69,-47.5 355.62,-52.96 361,-57.43\"/>\n",
+       "<text text-anchor=\"middle\" x=\"262.92\" y=\"-101.06\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
        "</g>\n",
        "<!-- j -->\n",
        "<g id=\"node3\" class=\"node\">\n",
        "<title>j</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"96.94\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"96.94\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">j</text>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"188.11\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"188.11\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">j</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;j -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>foo&#45;&gt;j</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M173.74,-138.08C158.64,-114.48 131.02,-71.29 113.34,-43.65\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"116.1,-41.46 107.76,-34.92 110.2,-45.23 116.1,-41.46\"/>\n",
-       "<text text-anchor=\"middle\" x=\"111.54\" y=\"-79.66\" font-family=\"Times,serif\" font-size=\"14.00\">JumpJets</text>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M264.91,-138.08C249.81,-114.48 222.19,-71.29 204.51,-43.65\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"207.27,-41.46 198.93,-34.92 201.37,-45.23 207.27,-41.46\"/>\n",
+       "<text text-anchor=\"middle\" x=\"202.71\" y=\"-79.66\" font-family=\"Times,serif\" font-size=\"14.00\">JumpJets</text>\n",
        "</g>\n",
-       "<!-- 5.0 -->\n",
+       "<!-- 0.05567770108771375 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>5.0</title>\n",
-       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"27.77\" cy=\"-197.56\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"27.77\" y=\"-193.86\" font-family=\"Times,serif\" font-size=\"14.00\">5.0</text>\n",
+       "<title>0.05567770108771375</title>\n",
+       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"118.94\" cy=\"-197.56\" rx=\"118.88\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"118.94\" y=\"-193.86\" font-family=\"Times,serif\" font-size=\"14.00\">0.05567770108771375</text>\n",
        "</g>\n",
-       "<!-- foo&#45;&gt;5.0 -->\n",
+       "<!-- foo&#45;&gt;0.05567770108771375 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>foo&#45;&gt;5.0</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M159.29,-161.72C133.13,-168.85 92,-180.06 62.71,-188.04\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"61.61,-184.71 52.88,-190.72 63.45,-191.46 61.61,-184.71\"/>\n",
-       "<text text-anchor=\"middle\" x=\"55.5\" y=\"-163.68\" font-family=\"Times,serif\" font-size=\"14.00\">DistanceMoved</text>\n",
+       "<title>foo&#45;&gt;0.05567770108771375</title>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M250.46,-161.72C233.2,-166.43 209.43,-172.9 186.84,-179.06\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"185.64,-175.76 176.91,-181.76 187.48,-182.51 185.64,-175.76\"/>\n",
+       "<text text-anchor=\"middle\" x=\"163.15\" y=\"-159.19\" font-family=\"Times,serif\" font-size=\"14.00\">DistanceMoved</text>\n",
        "</g>\n",
-       "<!-- [7, 9] -->\n",
+       "<!-- [5, 6] -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>[7, 9]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"336\" cy=\"-213.73\" rx=\"35.19\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"336\" y=\"-210.03\" font-family=\"Times,serif\" font-size=\"14.00\">[7, 9]</text>\n",
+       "<title>[5, 6]</title>\n",
+       "<ellipse fill=\"none\" stroke=\"green\" cx=\"427.17\" cy=\"-213.73\" rx=\"35.19\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"427.17\" y=\"-210.03\" font-family=\"Times,serif\" font-size=\"14.00\">[5, 6]</text>\n",
        "</g>\n",
-       "<!-- foo&#45;&gt;[7, 9] -->\n",
+       "<!-- foo&#45;&gt;[5, 6] -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>foo&#45;&gt;[7, 9]</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M207.81,-163.93C231.95,-173.31 270,-188.09 298.39,-199.12\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"297.4,-202.49 307.99,-202.85 299.93,-195.96 297.4,-202.49\"/>\n",
-       "<text text-anchor=\"middle\" x=\"213.1\" y=\"-185.33\" font-family=\"Times,serif\" font-size=\"14.00\">XYLocation</text>\n",
+       "<title>foo&#45;&gt;[5, 6]</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M298.98,-163.93C323.12,-173.31 361.17,-188.09 389.56,-199.12\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"388.57,-202.49 399.16,-202.85 391.1,-195.96 388.57,-202.49\"/>\n",
+       "<text text-anchor=\"middle\" x=\"304.27\" y=\"-185.33\" font-family=\"Times,serif\" font-size=\"14.00\">XYLocation</text>\n",
        "</g>\n",
-       "<!-- 5 -->\n",
+       "<!-- 1 -->\n",
        "<g id=\"node6\" class=\"node\">\n",
-       "<title>5</title>\n",
-       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"176.86\" cy=\"-317.16\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"176.86\" y=\"-313.46\" font-family=\"Times,serif\" font-size=\"14.00\">5</text>\n",
+       "<title>1</title>\n",
+       "<ellipse fill=\"none\" stroke=\"purple\" cx=\"268.02\" cy=\"-317.16\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"268.02\" y=\"-313.46\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n",
        "</g>\n",
-       "<!-- foo&#45;&gt;5 -->\n",
+       "<!-- foo&#45;&gt;1 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>foo&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M183.61,-173.17C182.29,-201.29 179.75,-255.37 178.19,-288.66\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"174.69,-288.52 177.72,-298.68 181.69,-288.85 174.69,-288.52\"/>\n",
-       "<text text-anchor=\"middle\" x=\"146.9\" y=\"-234.71\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
+       "<title>foo&#45;&gt;1</title>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M274.78,-173.17C273.46,-201.29 270.92,-255.37 269.36,-288.66\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"265.86,-288.52 268.89,-298.68 272.86,-288.85 265.86,-288.52\"/>\n",
+       "<text text-anchor=\"middle\" x=\"238.07\" y=\"-234.71\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fff72ce2550>"
+       "<graphviz.graphs.Digraph at 0x7fff28601f10>"
       ]
      },
      "metadata": {},
@@ -397,16 +397,16 @@
     "if __name__ == \"__main__\":\n",
     "    from IPython.display import display\n",
     "    qs.reset()\n",
-    "    Move(\"foo\", XYLocation=[1, 1], Elevation=0, Movement={\"MovementSpeed\": 8, \"JumpJets\": \"j\", \"DistanceMoved\": 0})\n",
+    "    Move(\"foo\", XYLocation=[1, 1], Elevation=0, Movement={\"MovementSpeed\": 8 * 0.03937008, \"JumpJets\": \"j\", \"DistanceMoved\": 0})\n",
     "    assert Movement.has_jump_jets(entity=\"foo\")\n",
     "    assert Move.entities() == ['foo']\n",
     "    print(\"Initial State\")\n",
     "    display(qs.render())\n",
     "    \n",
-    "    Move.move(entity=\"foo\", delta=[3, 4, 5])\n",
+    "    Move.move(entity=\"foo\", delta=[3, 4, 1])\n",
     "    assert XYLocation.get_relationship(\"foo\") == [4, 5]\n",
-    "    assert Elevation.get_relationship(\"foo\") == 5\n",
-    "    assert DistanceMoved.get_relationship(\"foo\") == sum([d * d for d in [3, 4, 5]]) ** 0.5\n",
+    "    assert Elevation.get_relationship(\"foo\") == 1\n",
+    "    assert DistanceMoved.get_relationship(\"foo\") == (sum([d * d for d in [3, 4]]) ** 0.5 + 1 * 2) * 0.03937008\n",
     "    \n",
     "    try:\n",
     "        Move.move(entity=\"foo\", delta=[9, 0, 0])\n",
@@ -414,10 +414,10 @@
     "    except MovementSpeed.MovementSpeedViolation as msv:\n",
     "        print(f\"Caught expected Movement Speed Violation: {msv}\")\n",
     "    \n",
-    "    Move.move_to(entity=\"foo\", newLocation=[7, 9, 5])\n",
-    "    assert XYLocation.get_relationship(\"foo\") == [7, 9]\n",
-    "    assert Elevation.get_relationship(\"foo\") == 5\n",
-    "    assert DistanceMoved.get_relationship(\"foo\") == 5\n",
+    "    Move.move_to(entity=\"foo\", newLocation=[5, 6, 1])\n",
+    "    assert XYLocation.get_relationship(\"foo\") == [5, 6]\n",
+    "    assert Elevation.get_relationship(\"foo\") == 1\n",
+    "    assert DistanceMoved.get_relationship(\"foo\") == (sum([d * d for d in [1, 1]]) ** 0.5) * 0.03937008\n",
     "\n",
     "    print(\"Final State\")\n",
     "    display(qs.render())"
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a62d53-024a-406e-9c56-c4a865448604",
+   "id": "1a5f27df-5a72-47c3-bbaa-1c58df1fea35",
    "metadata": {},
    "outputs": [],
    "source": []
