--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -136,7 +136,7 @@
     "                        case \"short\":\n",
     "                            weaponSystem = ShortRangeWeapons\n",
     "                        case \"medium\":\n",
-    "                            weaponSystem = MediumRangeWeapons\n",
+    "                            weaponSystem = MidRangeWeapons\n",
     "                        case \"long\":\n",
     "                            weaponSystem = LongRangeWeapons\n",
     "                    attackDamage = weaponSystem(gameeventobject).Targeting.Damage.terminant\n",
