Range handling and TMM

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -127,14 +127,22 @@
     "        # TODO: get distance from graph XY, Elevation instead\n",
     "        self.targetDistance = self.rsc.distanceBetweenObjects(self.actor, self.target)\n",
     "        self.targetRange = \"short\" if self.targetDistance < 155 else \"medium\" if self.targetDistance < 610 else \"long\"\n",
-    "        self.rangeModifier = 0 if \"short\" else 2 if \"medium\" else 4\n",
+    "        match self.targetRange:\n",
+    "            case \"short\":\n",
+    "                weaponSystems = mc.ShortRangeWeapons\n",
+    "            case \"medium\":\n",
+    "                weaponSystems = mc.MidRangeWeapons\n",
+    "            case \"long\":\n",
+    "                weaponSystems = mc.LongRangeWeapons\n",
+    "        self.rangeModifier = weaponSystems(self.actor.oid).Targeting.Modifier.terminant\n",
     "\n",
     "        self.objMovement = self.rsc.trackedObjectLastDistance(self.actor)\n",
     "        self.aMM = -1 if self.objMovement is None or self.objMovement < 10 else 1\n",
     "        self.targetMovement = self.rsc.trackedObjectLastDistance(self.target)\n",
-    "        self.tMM = -1 if self.targetMovement is None or self.targetMovement < 10 else 1\n",
+    "        self.tMM = -1 if self.targetMovement is None or self.targetMovement < 10 else mc.TMM(self.actor.oid).terminant\n",
     "        self.skill = mc.Skill(self.actor.oid).terminant\n",
-    "        self.targetNumber = int(self.skill) + self.aMM + self.tMM + 0 + self.rangeModifier\n",
+    "        self.otherModifiers = 0\n",
+    "        self.targetNumber = int(self.skill) + self.aMM + self.tMM + self.otherModifiers + self.rangeModifier\n",
     "        self.gameEvent = None\n",
     "\n",
     "    def declare(self):\n",
@@ -610,9 +618,9 @@
     "                            path_blocked[(dx, dy)] = True\n",
     "                            break\n",
     "        \n",
-    "                movement_cost = mc.Move.movement_cost([dx * i * 25.4, dy * i * 25.4, elevation])\n",
+    "                movement_cost = mc.Move.movement_cost([dx * i * 25.4, dy * i * 25.4, elevation * 25.4])\n",
     "\n",
-    "                if movement_cost >= movement_speed * 0.9:\n",
+    "                if movement_cost >= movement_speed * 0.95:\n",
     "                    path_blocked[(dx, dy)] = True\n",
     "                else:\n",
     "                    costByLocation[(x, y)] = movement_cost\n",
