Implement Visibility Map

--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -134,6 +134,8 @@
     "    changeType: str = \"unclassified\"\n",
     "    lastChange: object = None\n",
     "\n",
+    "    ChangeTypes = [\"add\", \"move\", \"delete\", \"unclassified\"]\n",
+    "\n",
     "    def __post_init__(self):\n",
     "        if self.changeContours is None:\n",
     "            self.corner = None\n",
@@ -179,7 +181,7 @@
     "\n",
     "    def classify(self, changeType: str, lastChange: object=None):\n",
     "        assert self.changeType is not None, \"Unable to classify null ChangeType\"\n",
-    "        assert changeType in [\"add\", \"move\", \"delete\", \"unclassified\"]\n",
+    "        assert changeType in self.ChangeTypes\n",
     "        self.lastChange = lastChange\n",
     "        self.changeType = changeType\n",
     "\n",
